# u8c

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile  PKGBUILD  README.md  README.txt  changelog.md  test.c  txttolit.c
docs/: u8c_abrt.3  u8c_abrtfn.3  u8c_col.3  u8c_dbg.3  u8c_dbgprint.3  u8c_end.3  u8c_errhandltyp.3  u8c_errtyp.3  u8c_fmt.3  u8c_fmttyp.3  u8c_geterr.3  u8c_init.3  u8c_isalnum.3  u8c_isalpha.3  u8c_iscntrl.3  u8c_isdigit.3  u8c_ispunct.3  u8c_isspace.3  u8c_isxdigit.3  u8c_print.3  u8c_println.3  u8c_regerrhandl.3  u8c_seterr.3  u8c_setfmt.3  u8c_thrdsafe.3  u8c_u16alloc.3  u8c_u16free.3  u8c_u32alloc.3  u8c_u32cat.3  u8c_u32cmp.3  u8c_u32cp.3  u8c_u32fndchr.3  u8c_u32fndpat.3  u8c_u32free.3  u8c_u32ins.3  u8c_u32max.3  u8c_u32substr.3  u8c_u32sz.3  u8c_u8alloc.3  u8c_u8dec.3  (+6 more)
include/: u8c.h
include/u8c/: SIZE_C.h  abrt.h  chk.h  col.h  dbg.h  dbgprint.h  debug.h  end.h  err.h  errhandltyp.h  errtyp.h  fmt.h  fmttyp.h  free.h  freeu32.h  freeu8.h  geterr.h  init.h  intern.h  is.h  isalnum.h  isalpha.h  iscntrl.h  isdigit.h  ispunct.h  isspace.h  isxdigit.h  main.h  print.h  println.h  regerrhandl.h  seterr.h  setfmt.h  str.h  thrdsafe.h  txt.h  u16.h  u32.h  u32alloc.h  u32cat.h  (+17 more)
src/u8c/: abrt.c  dat.c  dat.h  dattyp.h  debug.c  end.c  err.c  err.h  errlock.c  errlock.h  fmt.c  free.c  geterr.c  init.c  intern.h  isalnum.c  isalpha.c  iscntrl.c  isdigit.c  ispunct.c  isspace.c  isxdigit.c  print.c  println.c  regerrhandl.c  seterr.c  seterr.h  setfmt.c  stat.c  stat.h  thrdsafe.c  u16alloc.c  u16free.c  u32alloc.c  u32cat.c  u32cmp.c  u32cp.c  u32fndchr.c  u32fndpat.c  u32free.c  (+9 more)
src/u8c/chk.h.d/: isalnum.c  isalpha.c  iscntrl.c  isdigit.c  islower.c  ispunct.c  isspace.c  issurro.c  isupper.c  isxdigit.c
src/u8c/err.h.d/: geterr.c  regerrhandl.c  seterr.c
src/u8c/fmt.h.d/: fmt.c  print.c  println.c  setfmt.c  vfmt.c  vprint.c
src/u8c/intern.h.d/: dat.c
src/u8c/is.h.d/: isalnum.c  isalpha.c  iscntrl.c  isdigit.c  isspace.c
src/u8c/main.h.d/: abrtfn.c  debug.c  end.c  init.c  thrdsafe.c  uniblk.c  uninm.c
src/u8c/str.h.d/: stralloc.c  strcat.c  strcmp.c  strcp.c  strfndchr.c  strfndpat.c  strfree.c  strins.c  strsubstr.c  strsz.c
src/u8c/u16.h.d/: u16alloc.c
src/u8c/u32.h.d/: u32alloc.c  u32cmp.c  u32fndpat.c  u32free.c  u32ins.c  u32substr.c
src/u8c/u8.h.d/: u8alloc.c  u8dec.c  u8enc.c  u8free.c
u8c/: CMakeLists.txt
u8c-check/: CMakeLists.txt
u8c-check/source/: check.cc
u8c-check/src/: test.cc  test0.inl  test1.inl
u8c/include/u8c/: arr  character.h  cstr  format.h  impl  math  misc  str  u8c  u8c.h  utf
u8c/include/u8c/arr.d/: arr
u8c/include/u8c/cstr.d/: cstrcmp  cstrcpy  cstrdup  cstrlen
u8c/include/u8c/impl.d/: isarch  isos
u8c/include/u8c/math.d/: abs  fma  isinf  isnan  isprime  pow  quota  sqrt  trunc
u8c/include/u8c/misc.d/: renew
u8c/include/u8c/str.d/: dbgprint  fmt  str
u8c/include/u8c/u8c.d/: uniblk  uninm
u8c/include/u8c/utf.d/: cnv  isalnum  isalpha  iscntrl  isdigit  islower  ispunct  isspace  issurro  isupper  isxdigit
u8c/source/character/: is_alphabetic.c  is_control.c  is_hexadecimal_numeric.c  is_majuscule.c  is_minuscule.c  is_numeric.c  is_punctuation.c  is_surrogate.c  is_whitespace.c  unicode_name.c
u8c/source/format/: decode_utf16.c  decode_utf16_length.c  decode_utf8.c  decode_utf8_length.c  encode_utf16.c  encode_utf16_length.c  encode_utf8.c  encode_utf8_length.c
u8c/src/: operator.cc
u8c/src/u8c/: fmt.cc  print.cc  println.cc
